--- a/index.html
+++ b/index.html
@@ -12,23 +12,20 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Mi Portafolio</a>
+                <a class="navbar-brand" href="#">Portafolio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                            <a class="nav-link active" aria-current="page" target="_blank" href="https://www.linkedin.com/in/josé-rosas-montoya-37b089160/"><i class="fa-brands fa-linkedin"></i></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Proyectos</a>
+                            <a class="nav-link" href="https://github.com/joserosas97"><i class="fa-brands fa-github"></i></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Servicios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contacto</a>
+                            <a class="nav-link" href="mailto:rosasmontoya.jose@gmail.com"><i class="fa-solid fa-envelope"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -120,5 +117,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://kit.fontawesome.com/a2afb74419.js" crossorigin="anonymous"></script>
 </body>
 </html>
