--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-custom">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">Portafolio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,10 +22,10 @@
                             <a class="nav-link active" aria-current="page" target="_blank" href="https://www.linkedin.com/in/josé-rosas-montoya-37b089160/"><i class="fa-brands fa-linkedin"></i></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://github.com/joserosas97"><i class="fa-brands fa-github"></i></a>
+                            <a class="nav-link" target="_blank" href="https://github.com/joserosas97"><i class="fa-brands fa-github"></i></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="mailto:rosasmontoya.jose@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+                            <a class="nav-link" target="_blank" href="mailto:rosasmontoya.jose@gmail.com"><i class="fa-solid fa-envelope"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -33,44 +33,44 @@
         </nav>
     </header>
 
-    <section id="hero" class="bg-dark text-white py-5">
+    <section id="hero" class="bg-custom text-white py-5">
         <div class="container">
             <h1 class="display-4">¡Bienvenido a mi portafolio!</h1>
-            <p class="lead">Explora mis proyectos, conoce mis servicios y ponte en contacto conmigo.</p>
+            <p class="lead">Aqui podras ver algunos de mis proyectos a lo largo de este corto tiempo.</p>
         </div>
     </section>
 
     <section id="proyectos" class="py-5">
         <div class="container">
-            <h2 class="mb-4">Proyectos Destacados</h2>
+            <h2 class="mb-4">Proyectos</h2>
             <div class="row">
                 <div class="col-md-4">
                     <div class="card mb-4">
-                        <img src="https://via.placeholder.com/300" class="card-img-top" alt="...">
+                        <img src="./assets/img/desafio 1.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Proyecto 1</h5>
-                            <p class="card-text">Descripción breve del proyecto 1.</p>
-                            <a href="#" class="btn btn-primary">Ver más</a>
+                            <p class="card-text">Primer Proyecto solo aplicando html.</p>
+                            <a href="#" class="btn btn-custom">Ver más</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card mb-4">
-                        <img src="https://via.placeholder.com/300" class="card-img-top" alt="...">
+                        <img src="./assets/img/desafio 3.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Proyecto 2</h5>
-                            <p class="card-text">Descripción breve del proyecto 2.</p>
-                            <a href="#" class="btn btn-primary">Ver más</a>
+                            <p class="card-text">Proyecto con flex box.</p>
+                            <a href="#" class="btn btn-custom">Ver más</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card mb-4">
-                        <img src="https://via.placeholder.com/300" class="card-img-top" alt="...">
+                        <img src="./assets/img/desafio 4.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Proyecto 3</h5>
-                            <p class="card-text">Descripción breve del proyecto 3.</p>
-                            <a href="#" class="btn btn-primary">Ver más</a>
+                            <p class="card-text">Proyecto enfocado a bootstrap.</p>
+                            <a href="#" class="btn btn-custom">Ver más</a>
                         </div>
                     </div>
                 </div>
@@ -78,15 +78,15 @@
         </div>
     </section>
 
-    <section id="servicios" class="bg-light py-5">
+    <section id="servicios" class="py-5">
         <div class="container">
             <h2 class="mb-4">Mis Servicios</h2>
             <div class="row">
                 <div class="col-md-4">
                     <div class="card mb-4">
                         <div class="card-body">
-                            <h5 class="card-title">Diseño Web</h5>
-                            <p class="card-text">Ofrezco servicios de diseño web personalizados para satisfacer tus necesidades.</p>
+                            <h5 class="card-title">Soporte de Red</h5>
+                            <p class="card-text">Ofrezco servicios de diseño e implementacion en Redes Lan/Wan.</p>
                         </div>
                     </div>
                 </div>
@@ -110,9 +110,9 @@
         </div>
     </section>
 
-    <footer class="bg-dark text-white py-4">
+    <footer class="bg-custom text-white py-4">
         <div class="container text-center">
-            <p>&copy; 2024 Mi Portafolio</p>
+            <p>&copy; José Rosas Montoya 2024</p>
         </div>
     </footer>
 
